# GetLyrics

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  builder.sh
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/api/: lrclib_api.rs  lyric_api.rs  mod.rs
src/hasher/: dummy_hasher.rs  file_hash_helper.rs  mod.rs
src/metadata/: metadata_extractor.rs  metadata_extractor_test.rs  mod.rs
src/model/: data_model.rs  data_model_test.rs  mod.rs
src/parallel_helper/: mod.rs  parallel_helper.rs
src/scrapper/: mod.rs  scrapper.rs  scrapper_test.rs
src/traits/: traits.rs
src/writer/: mod.rs  writer.rs  writer_test.rs
